--- a/index.html
+++ b/index.html
@@ -37,34 +37,14 @@
               <form class="mt-2">
                 <div class="mx-auto max-w-lg">
                   <div class="py-2">
-                    <input
-                      placeholder="Email address"
-                      type="text"
-                      class="
-                        border-b-2
-                        text-md
-                        px-3
-                        py-2
-                        w-full
-                        bg-white
-                        border-gray-300
-                        placeholder-gray-600
-                        focus:placeholder-gray-500
-                        focus:bg-white
-                        focus:border-gray-600
-                        focus:outline-none
-                      "
-                    />
-                  </div>
-                  <div class="py-2" x-data="{ show: true }">
                     <div class="relative">
                       <input
-                        placeholder="Password"
-                        :type="show ? 'password' : 'text'"
+                        placeholder="Email address"
+                        type="text"
                         class="
                           border-b-2
                           text-md
-                          px-3
+                          px-11
                           py-4
                           w-full
                           bg-white
@@ -80,7 +60,7 @@
                         class="
                           absolute
                           inset-y-0
-                          left-2
+                          -left-40
                           pr-3
                           flex
                           items-center
@@ -90,19 +70,132 @@
                       >
                         <svg
                           class="h-6 text-gray-700 opacity-50"
-                          fill="none"
-                          @click="show = !show"
-                          :class="{'hidden': !show, 'block':show }"
                           xmlns="http://www.w3.org/2000/svg"
+                          xmlns:xlink="http://www.w3.org/1999/xlink"
+                          version="1.1"
+                          width="350"
+                          height="350"
+                          viewBox="0 0 350 350"
+                          xml:space="preserve"
+                        >
+                          <desc>Created with Fabric.js 1.7.22</desc>
+                          <defs></defs>
+                          <g
+                            id="icon"
+                            style="
+                              stroke: none;
+                              stroke-width: 1;
+                              stroke-dasharray: none;
+                              stroke-linecap: butt;
+                              stroke-linejoin: miter;
+                              stroke-miterlimit: 10;
+                              fill: none;
+                              fill-rule: nonzero;
+                              opacity: 1;
+                            "
+                            transform="translate(-1.9444444444444287 -1.9444444444444287) scale(3.89 3.89)"
+                          >
+                            <path
+                              d="M 44.636 46.449 c -12.806 0 -23.225 -10.418 -23.225 -23.224 C 21.411 10.418 31.83 0 44.636 0 C 57.442 0 67.86 10.418 67.86 23.225 C 67.86 36.031 57.442 46.449 44.636 46.449 z M 44.636 2.967 c -11.17 0 -20.258 9.087 -20.258 20.258 c 0 11.17 9.087 20.257 20.258 20.257 c 11.17 0 20.257 -9.087 20.257 -20.257 C 64.893 12.054 55.806 2.967 44.636 2.967 z"
+                              style="
+                                stroke: none;
+                                stroke-width: 1;
+                                stroke-dasharray: none;
+                                stroke-linecap: butt;
+                                stroke-linejoin: miter;
+                                stroke-miterlimit: 10;
+                                fill: rgb(0, 0, 0);
+                                fill-rule: nonzero;
+                                opacity: 1;
+                              "
+                              transform=" matrix(1 0 0 1 0 0) "
+                              stroke-linecap="round"
+                            />
+                            <path
+                              d="M 73.777 90 H 16.223 c -0.82 0 -1.484 -0.664 -1.484 -1.484 V 73.464 c 0 -12.535 10.199 -22.735 22.734 -22.735 h 15.052 c 12.535 0 22.735 10.199 22.735 22.735 v 15.052 C 75.26 89.336 74.596 90 73.777 90 z M 17.707 87.033 h 54.587 V 73.464 c 0 -10.9 -8.867 -19.768 -19.768 -19.768 H 37.474 c -10.9 0 -19.767 8.867 -19.767 19.768 V 87.033 z"
+                              style="
+                                stroke: none;
+                                stroke-width: 1;
+                                stroke-dasharray: none;
+                                stroke-linecap: butt;
+                                stroke-linejoin: miter;
+                                stroke-miterlimit: 10;
+                                fill: rgb(0, 0, 0);
+                                fill-rule: nonzero;
+                                opacity: 1;
+                              "
+                              transform=" matrix(1 0 0 1 0 0) "
+                              stroke-linecap="round"
+                            />
+                          </g>
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="py-2" x-data="{ show: true }">
+                    <div class="relative">
+                      <input
+                        placeholder="Password"
+                        :type="show ? 'password' : 'text'"
+                        class="
+                          border-b-2
+                          text-md
+                          px-11
+                          py-4
+                          w-full
+                          bg-white
+                          border-gray-300
+                          placeholder-gray-600
+                          focus:placeholder-gray-500
+                          focus:bg-white
+                          focus:border-gray-600
+                          focus:outline-none
+                        "
+                      />
+                      <div
+                        class="
+                          absolute
+                          inset-y-0
+                          -left-60
+                          pr-3
+                          flex
+                          items-center
+                          text-sm
+                          leading-5
+                        "
+                      >
+                        <!-- <svg
+                          class="h-6 text-gray-700 opacity-50"
+                          fill="none"
                           viewbox="0 0 576 512"
                         >
                           <path
                             fill="currentColor"
                             d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
                           ></path>
+                        </svg> -->
+                        <svg
+                          class="h-6 text-gray-700 opacity-50"
+                          id="light"
+                          enable-background="new 0 0 24 24"
+                          height="512"
+                          viewBox="0 0 24 24"
+                          width="512"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <g>
+                            <path
+                              d="m19 24h-14c-1.103 0-2-.897-2-2v-10c0-1.103.897-2 2-2h14c1.103 0 2 .897 2 2v10c0 1.103-.897 2-2 2zm-14-13c-.552 0-1 .449-1 1v10c0 .551.448 1 1 1h14c.552 0 1-.449 1-1v-10c0-.551-.448-1-1-1z"
+                            />
+                          </g>
+                          <g>
+                            <path
+                              d="m17.5 11c-.276 0-.5-.224-.5-.5v-4.5c0-2.757-2.243-5-5-5s-5 2.243-5 5v4.5c0 .276-.224.5-.5.5s-.5-.224-.5-.5v-4.5c0-3.309 2.691-6 6-6s6 2.691 6 6v4.5c0 .276-.224.5-.5.5z"
+                            />
+                          </g>
                         </svg>
 
-                        <svg
+                        <!-- <svg
                           class="h-6 text-gray-700"
                           fill="none"
                           @click="show = !show"
@@ -114,7 +207,7 @@
                             fill="currentColor"
                             d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
                           ></path>
-                        </svg>
+                        </svg> -->
                       </div>
                       <div
                         class="
